# cellular-automaton-with-agents

./: AST.hs  Agents.hs  CHANGELOG.md  Cellular.hs  Environment.hs  Eval.hs  GameOfLifeAgents.hs  Main.hs  Monads.hs  Parse.y  ParseGame.hs  README.md  cellular-automaton.cabal  stack.yaml
app/: Main.hs
examples/: conway.sim  epidemic.sim  fire.sim
grids/: bigblock.txt  blinker.txt  glider.txt
src/: AST.hs  Agents.hs  Cellular.hs  Environment.hs  Eval.hs  EvalAST.hs  EvalSim.hs  Monads.hs  Neighbors.hs  PP.hs  Parse.hs  Parse.y  ParseGrid.hs
