name:                cellular-automaton
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cellular-automaton#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:     AST,
                       Agents,
                       Environment,
                       Eval,
                       Cellular,
                       Monads,
                       Parse,
                       ParseGrid
  hs-source-dirs:      src
  default-extensions:  GADTs
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       strict,
                       random,
                       random-shuffle,
                       array,
                       containers,
                       mtl,
                       parsec,
                       gloss
  default-language: Haskell2010

executable cellular-automaton
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:  GADTs
  default-language:    Haskell2010
  build-depends:       cellular-automaton,
                       base >= 4.7 && < 5,
                       vector,
                       strict,
                       random,
                       random-shuffle,
                       array,
                       containers,
                       mtl,
                       parsec,
                       gloss
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
